--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -684,7 +684,7 @@
   device:
     type: phablet
     brand: HTC
-    model: One max
+    model: One Max
   os_family: Android
   browser_family: Unknown
 - 
@@ -6256,3 +6256,21 @@
     model: iPhone 8 Plus
   os_family: iOS
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; HTC6600LVW) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.138 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 81.0.4044.138
+    engine: Blink
+    engine_version: ""
+  device:
+    type: phablet
+    brand: HTC
+    model: One Max
+  os_family: Android
+  browser_family: Chrome
