--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -101,7 +101,7 @@ HTC:
       model: 'One'
     - regex: 'PJ83100(?:[);/ ]|$)'
       model: 'One X'
-    - regex: 'One Mini 2(?:[);/ ]|$)'
+    - regex: '(?:HTC)?One ?Mini ?2(?:[);/ ]|$)'
       model: 'One Mini 2'
     - regex: 'X2-HT(?:[);/ ]|$)'
       model: 'One X2'
@@ -111,14 +111,26 @@ HTC:
       model: 'J One'
     - regex: 'HTL23(?:[);/ ]|$)'
       model: 'J Butterfly'
+    - regex: 'HTCButterflys901s(?:[);/ ]|$)'
+      model: 'Butterfly S'
     - regex: '(?:0PJA2|0PJA10)(?:[);/ ]|$)'
       model: 'One M9'
+    - regex: 'HTC(?:6500LVW|PN071)(?:[);/ ]|$)'
+      model: 'One M7'
+    - regex: '(?:One M8|HTC6525LVW)(?:[);/ ]|$)'
+      model: 'One M8'
+    - regex: '0PAJ5(?:[);/ ]|$)'
+      model: 'One E8'
+    - regex: 'HTC6515LVW(?:[);/ ]|$)'
+      model: 'One Remix'
     - regex: 'X525a(?:[);/ ]|$)'
       model: 'One X+'
     - regex: '2PQ93(?:[);/ ]|$)'
       model: 'One A9'
     - regex: 'ADR6300'
       model: 'Droid Incredible'
+    - regex: 'HTC6435LVW'
+      model: 'Droid DNA'
     - regex: 'ADR6400L'
       model: 'ThunderBolt'
     - regex: 'ADR6410LRA'
@@ -137,6 +149,14 @@ HTC:
       model: 'Desire 510'
     - regex: '608t(?:[);/ ]|$)'
       model: 'Desire 608t'
+    - regex: 'HTC[_ ]?(0P4E[12])(?:[);/ ]|$)'
+      model: 'Desire 601'
+    - regex: 'HTCD620h(?:[);/ ]|$)'
+      model: 'Desire 620'
+    - regex: 'HTC(?:0P9C2|D816x)(?:[);/ ]|$)'
+      model: 'Desire 816'
+    - regex: 'HTCD526h(?:[);/ ]|$)'
+      model: 'Desire 526G Plus'
     - regex: 'EXODUS 1(?:[);/ ]|$)'
       model: 'Exodus 1'
 
@@ -151,9 +171,9 @@ HTC:
     - regex: 'HTC[ _\-]Flyer[ _\-]([\w]{1,5})'
       device: 'tablet'
       model: 'Flyer $1'
-    - regex: 'HTC[ _\-]One[ _\-]max(?:[);/ ]|$)'
+    - regex: 'HTC(?:[ _\-])?(?:One[ _\-]max|6600LVW)(?:[);/ ]|$)'
       device: 'phablet'
-      model: 'One max'
+      model: 'One Max'
     - regex: 'HTC[ _]([^/;]+) [0-9]+(?:\.[0-9]+)+ Build'
       model: '$1'
     - regex: 'HTC[ _]([^/;]+) Build'
@@ -179,10 +199,6 @@ HTC:
       model: '$1'
     - regex: '(ADR[a-z0-9]+)'
       model: '$1'
-    - regex: '(One M8)'
-      model: '$1'
-    - regex: '0PAJ5(?:[);/ ]|$)'
-      model: 'One E8'
     - regex: 'HTV32(?:[);/ ]|$)'
       model: '10'
     - regex: 'HTV31(?:[);/ ]|$)'
@@ -7925,7 +7941,7 @@ iNew:
 
 # iPro
 iPro:
-  regex: '(?:Kylin[ _]5.[05]S?|KYLIN40|Jade[78]s|Amber[67]S?|Amber5S_Pro|Phonenix50S|Zafiro)(?:[);/ ]|$)'
+  regex: '(?:Kylin[ _]5.[05]S?|KYLIN40|Jade[78]s|Amber[67]S?|Amber5S_Pro|Phonenix50S|Zafiro|I9355A)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Kylin_5.0S'
@@ -7946,6 +7962,8 @@ iPro:
       model: 'Phonenix 50S'
     - regex: 'Zafiro'
       model: 'Zafiro'
+    - regex: '(I9355A)'
+      model: '$1'
 
 # Infinix
 Infinix:
@@ -11557,7 +11575,7 @@ Nomu:
 
 # Nomi
 Nomi:
-  regex: 'Nomi[ _-]|(C101010 Ultra2|i501[234]|i5032|i50[57]0|i5510|i5532|C0(700(?:[02358]|2HD)|7850)|C1010[0-3])(?:[);/ ]|$)'
+  regex: 'Nomi[ _-]|(C101010 Ultra2|i501[234]|i5032|i50[57]0|i5510|i5532|C0(700(?:[02358]|2HD)|7850)|C1010[0-3]|i(?:50[015]|450|40[01]|55[02]))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'i501[23](?:[);/ ]|$)'
@@ -11576,6 +11594,8 @@ Nomi:
       model: 'Space X2'
     - regex: 'i5510(?:[);/ ]|$)'
       model: 'Space M'
+    - regex: '(?:Nomi[ _])?i(50[015]|450|40[01]|55[02])(?:[);/ ]|$)'
+      model: 'i$1'
     - regex: 'C101010 Ultra2'
       model: 'Ultra 2'
       device: 'tablet'
@@ -11663,12 +11683,12 @@ Nous:
 
 # Nvidia
 Nvidia:
-  regex: 'NVIDIA|SHIELD Tablet K1|SHIELD Android TV|Tegra(Note-P1640| Note 7)'
+  regex: 'NVIDIA|SHIELD Tablet(?: K1)?|SHIELD Android TV|Tegra(Note-P1640| Note 7)'
   device: 'tablet'
   models:
     - regex: 'TegraNote-P1640'
       model: 'Tegra Note P1640'
-    - regex: '(SHIELD Tablet K1|Tegra Note 7)(?: Build|[;)])'
+    - regex: '(SHIELD Tablet(?: K1)?|Tegra Note 7)(?: Build|[;)])'
       model: '$1'
     - regex: 'SHIELD Android TV'
       model: 'SHIELD Android TV'
@@ -23022,3 +23042,15 @@ FNF:
       model: 'iFive $1'
     - regex: 'ifiveMini3'
       model: 'iFive Mini 3'
+
+# iMan
+iMan:
+  regex: '(i5800C|i6800)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
+
+# Vava
+VAVA:
+  regex: 'VAVA[ _](X3)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
