--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -648,7 +648,7 @@
   device:
     type: phablet
     brand: HTC
-    model: One max
+    model: One Max
   os_family: Android
   browser_family: Android Browser
 - 
@@ -666,7 +666,7 @@
   device:
     type: phablet
     brand: HTC
-    model: One max
+    model: One Max
   os_family: Android
   browser_family: Chrome
 - 
