--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9851,7 +9851,7 @@ LG:
       model: 'Q9 One'
     - regex: '(?:LG-)?(?:RS987|H901|H96[0128]|VS990)'
       model: 'V10'
-    - regex: 'LG-X240'
+    - regex: 'LG-(?:X240|M200)'
       model: 'K8 (2017)'
     - regex: '(?:LG-)?RS500'
       model: 'K8 4G'
